adjust directory